posts no longer overflow the container

--- a/src/components/Dropdown.scss
+++ b/src/components/Dropdown.scss
@@ -25,3 +25,9 @@
     border-radius: 4px;
     padding-block: 0.2rem;
 }
+
+.dropdown-icon {
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+}
