--- a/src/components/ImageGrid.scss
+++ b/src/components/ImageGrid.scss
@@ -6,7 +6,7 @@
 }
 
 .image-grid--1 {
-    margin-bottom: 16px;
+    margin-bottom: 0.8rem;
 }
 
 .image-grid--2 {
