--- a/src/components/Post.scss
+++ b/src/components/Post.scss
@@ -31,6 +31,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
+            overflow: hidden;
 
             .post-info-and-timestamp {
                 display: flex;
@@ -38,19 +39,30 @@
                 gap: 0.4rem;
                 align-items: center;
                 margin-bottom: 0.1rem;
+                flex-wrap: nowrap;
             }
     
             .post-info-inner {    
-                display: flex;
                 align-items: baseline;
-                max-width: max-content;
+                overflow: hidden;
+                display: flex;
+                white-space: nowrap;
+                max-width: 100%;
+                max-width: 80%;
                 
                 .post-display-name {
                     font-weight: bold;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
         
                 .post-handle {
                     color: var(--text-light);
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    min-width: 0;
+                    max-width: max-content;
+                    flex: 1;
                 }
             }
     
