--- a/src/index.scss
+++ b/src/index.scss
@@ -44,7 +44,7 @@
 
   --dropdown: #363636;
   --dropdown-highlight: #555555;
-  --separator: #000000;
+  --separator: #272727;
 }
 
 body, html {
